# R5-COP-Verification

./: .gitignore  AST_no_optim.txt  AST_optim.txt  CMakeLists.txt  R5COP.sln  README.md  test1.txt
R5-COP-Generator/: R5-COP-Generator.vcxproj.filters
R5-COP-Verification/: test1.txt
R5COP/: R5COP.vcxproj.filters
VS2013/: R5-COP-Verification.sln  monitor_generator.sln
VS2013/R5-COP-Generator/: R5-COP-Generator.vcxproj  R5-COP-Generator.vcxproj.filters  ast.html
VS2013/R5-COP-Verification/: R5-COP-Verification.vcxproj  R5-COP-Verification.vcxproj.filters
VS2013/enc_temp_folder/32f94895f085aeae66d3f9d9da463de1/: BlockGenerator.cpp
generator/: BlockGenerator.cpp  BlockGenerator.h  ConnectionNormalFormGenerator.cpp  ConnectionNormalFormGenerator.h  Construct.cpp  Construct.h  Eval.h  Function.cpp  Function.h  Generator.cpp  Generator.h  Language.h  ast_node.cpp  ast_node.h  ast_optimizer.cpp  ast_optimizer.h  block_generator.cpp  block_generator.h  connection_normalform_generator.cpp  connection_normalform_generator.h  generator.cpp  generator.h  generator_framework.cpp  generator_framework.h  main.cpp
generator/syntx/: alternation.cc  alternation.h  ast_draw.h  base_rule.cc  base_rule.h  character.cc  character.h  concatenation.cc  concatenation.h  enum_set.h  eol.cc  eol.h  epsilon.h  identifier.cc  identifier.h  integer.cc  integer.h  keyword.cc  keyword.h  language.h  ltl.cc  ltl.h  option.cc  option.h  parser.h  range.cc  range.h  real.cc  real.h  repetition.cc  repetition.h  repetition_or_epsilon.cc  repetition_or_epsilon.h  rule.cc  rule.h  search.cc  search.h  string.cc  string.h  substring.cc  (+5 more)
libs/SyntX/SyntX_VS2013/: ReadMe.txt  SyntX.sln  SyntX.vcxproj  SyntX.vcxproj.filters
libs/SyntX/util/languages/: language.h  ltl.cc  ltl.h
libs/SyntX/util/parser/: alternation.cc  alternation.h  ast_draw.cc  ast_draw.h  ast_optimizer.cpp  ast_optimizer.h  base_rule.cc  base_rule.h  character.cc  character.h  concatenation.cc  concatenation.h  debug_action.h  eol.cc  eol.h  epsilon.h  identifier.cc  identifier.h  integer.cc  integer.h  keyword.cc  keyword.h  option.cc  option.h  parser.h  range.cc  range.h  real.cc  real.h  repetition.cc  repetition.h  repetition_or_epsilon.cc  repetition_or_epsilon.h  rule.cc  rule.h  search.cc  search.h  string.cc  string.h  substring.cc  (+5 more)
monitor/: CMakeLists.txt  EventInterfaceHandler.cpp  EventInterfaceHandler.h  OutputState.h  Property.cpp  Property.h  main.cpp  monitor_name.launch  package.xml  publisher.cpp  ros_main.cpp  turtle_monitor.launch
monitor/src/: main.cpp  mission_cntrl_groovy.cpp  monitor_name.cpp  vel_monitor.cpp
monitor/src/monitor/: Events.h  Property.cpp  Property.h  events.h  gen_blocks.h  gen_commands.h  gen_events.h  main.cpp  monitor.cpp  monitor.h  output_state.cpp  property.cpp  property.h  state_register.cpp  state_register.h
monitor/src/monitor/events/: gen_event.h  subscriber.cpp  subscriber.h  subsriber.h
msg/: Parameters.msg
src/: EventHandler.h  EventInterfaceHandler.cpp  EventInterfaceHandler.h  Events.h  LineReader.h  OutputState.cpp  OutputState.h  Property.cpp  Property.h  PropertyHandler.h  StateRegister.cpp  StateRegister.h  main.c  main.cpp  publisher.cpp
